--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -26,7 +26,7 @@
     background-color: #fafafa;
     padding: 10px 9px;
   }
-  #profile_firstname {
+ form .username {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +34,7 @@
     padding: 2px 13px;
     border-radius: 5px;
 }
-#profile_firstname input:focus {
+form .username input:focus {
   box-shadow: unset !important;
 }
 #profile_lastname {
@@ -43,9 +43,25 @@
   align-items: center;
   background-color: #fafafa;
   padding: 2px 13px;
-  border-radius: 5px;
-}
+  border-radius: 5px;  
+}  
 #profile_lastname input:focus {
-box-shadow: unset !important;
+  box-shadow: unset !important;
 }
-
+.user_img {
+  position: relative; 
+  max-width: 105px;
+  width: 100%;
+  margin: 0 auto;
+}
+.edit_userimg{
+    position: absolute;
+    right: 0;
+    bottom: -4%;
+}
+.user_img img {
+  object-fit: cover;
+}
+.dropdown img {
+  object-fit: cover;
+}
