--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -11,6 +11,9 @@
   max-width: 40%;
   width: 100%;
 }
+.loginn .login .form .username{
+  background-color: #fff !important;
+}
 .leftside .bottom-text {
   height: 500px;
   display: flex;
@@ -159,6 +162,24 @@
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
+
+.col-lg-7.loginn.signup p {
+  display: flex;
+  flex-direction: column;
+  margin-top: 7rem;
+  color: #455a63;
+  font-weight: 300;
+}
+.login p svg {
+  max-width: 407px;
+  width: 100%;
+  height: 282px;
+  margin-bottom: 2rem;
+  margin-left: auto;
+    margin-right: auto;
+}
+
+
 @media (max-width: 1024px) {
     .leftside {
         height: auto !important;
