--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
     border-left: unset;
     background-image: url("./assets/images/down-arrrow.svg");
     position: absolute;
-    top: 25px;
+    top: 21px;
     height: 20px;
     width: 20px;
     background-repeat: no-repeat;
@@ -140,7 +140,36 @@ ul.dropdown-menu li button {
   padding: 5px 15px;
   font-size: 14px;
 }
-
+button.prev_arrow {
+  border: 0;
+  background-color: #fff !important;
+  margin-right: 12px !important;
+  margin-left: 0 !important;
+}
+button.next_arrow {
+  margin-left: 12px !important;
+  background-color: #fff !important;
+  border: 0;
+  margin-right: 0 !important;
+}
+.pagination button {
+  background-color: #D8D8D8;
+  border: 0;
+  padding: 4px 11px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 19px;
+}
+button.active {
+  background-color: #FF992B;
+  color: #fff;
+}
+.outer .dropdown {
+  display: flex;
+}
+.shadow-sm{
+  top: 100%;
+}
   @media (max-width: 991px) {
     .inner-wrap .email-confirmation {
       margin-left: 0;
