--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -10,13 +10,39 @@
 }
 ul.pagination li a {
   text-decoration: none;
-  padding: 0 8px;
+  padding: 0 9px;
   color: #000;
+  font-size: 17px;
 }
 ul.pagination li {
   padding: 3px;
 }
-
+ul.pagination li:nth-child(2) a{
+  display: none;
+}
+ul.pagination li:nth-child(7) a{
+  display: none;
+}
+li:nth-child(7)::after {
+  content: "";
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 4px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  margin-left: 10px;
+}
+li:nth-child(2)::after {
+  content: "";
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 4px;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  margin-right: 10px;
+}
 ul.pagination .active {
   background-color: #f6992d;
   border-radius: 21px;
