--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -25,25 +25,35 @@
     border: 0;
     background-color: #fafafa;
     padding: 10px 9px;
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
   }
  form .username {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fafafa;
-    padding: 2px 13px;
-    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-radius: 36px;
+    display: flex;
+    padding: 4px 18px;
+    align-items: center;
+}
+form .username input{
+  box-shadow: unset;
 }
 form .username input:focus {
-  box-shadow: unset !important;
+  box-shadow: unset;
+  background-color: transparent !important;
+}
+#profile_lastname input:focus{
+  background-color: transparent !important;
 }
 #profile_lastname {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #fafafa;
-  padding: 2px 13px;
-  border-radius: 5px;  
+  padding: 4px 18px;
+  border-radius: 36px;  
 }  
 #profile_lastname input:focus {
   box-shadow: unset !important;
