--- a/src/pages/neuro-radiology/neuro-radiology.css
+++ b/src/pages/neuro-radiology/neuro-radiology.css
@@ -2,11 +2,15 @@
     background-color: #fff;
     box-shadow: 8px 4px 19px 0px #00000011;
     color: #002a4a;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
+
   .findings .inner-cover {
     padding: 2rem;
     border-right: 1px dashed #dddddd;
     margin: 4px;
+    padding-top: 0;
   }
   .highlight {
     border: 1px solid #FF992B !important;
@@ -95,7 +99,10 @@
 .serach-result div {
   margin-bottom: 4px;
 }
-
+.findings.row h5 {
+    padding: 10px 36px;
+    margin-bottom: 0;
+}
 
   @media (max-width: 991px) {
     .findings .inner-cover {
@@ -165,6 +172,7 @@
   }
   .findings .right-cover {
     padding: 2rem;
+    padding-top: 0;
   }
   @media (max-width: 991px) {
     .findings .right-cover {
